# tiny_flags

./: .flake8  .gitignore  README.md  dev_lint.sh  pyproject.toml
src/: bitfield.py  tiny_flags.py  validations.py
src/tiny_flags.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_tiny_flags.py
