[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny_flags"
version = "0.0.1"
authors = [
  { name="Kaarle Kulvik", email="k.kulvik@gmail.com" },
]
description = "Map options/flags to methods using 32 or 64bit integers for optimized state management."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FistOfTheNorthStar/ale_air"
Issues = "https://github.com/FistOfTheNorthStar/tiny-issues/issues"

[project.optional-dependencies]
dev = [
    "pytest>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]