[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny_flags"
version = "0.0.1"
authors = [
  { name="Kaarle Kulvik", email="k.kulvik@gmail.com" },
]
description = "Map options/flags to methods using 32 or 64bit integers for optimized state management."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FistOfTheNorthStar/ale_air"
Issues = "https://github.com/FistOfTheNorthStar/tiny-issues/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "flake8>=7.1.1",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
